<resources>
    <string name="app_name">Geofence Util</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="no_saved_location">No location saved yet.\nPlease click \'+\' icon at bottom to add a location</string>
    <string name="save_your_location">Save Your Location</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="all_fields_required">All Fields are mandatory</string>
    <string name="title_activity_maps">Map</string>
</resources>
